// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fragment with an unknown attribute should ignore the attribute 1`] = `
<div>
  <b>
    This is some text with a bold and unknown attribute
  </b>
</div>
`;

exports[`Fragment with bold and italic attributes should render text wrapped in bold and italic DOM elements 1`] = `
.emotion-0 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  font-family: inherit;
  font-weight: inherit;
}

<div>
  <i
    class="emotion-0 emotion-1"
  >
    <b>
      This is some text with bold and italic attributes
    </b>
  </i>
</div>
`;

exports[`Fragment with bold attributes should render text wrapped in a bold DOM element 1`] = `
<div>
  <b>
    This is some text with bold attributes
  </b>
</div>
`;

exports[`Fragment with italic attributes in Farsi should render text wrapped in an italic DOM element 1`] = `
.emotion-0 {
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-family: inherit;
  font-weight: inherit;
}

<div>
  <i
    class="emotion-0 emotion-1"
  >
    This is some text with italic attributes
  </i>
</div>
`;

exports[`Fragment with italic attributes should render text wrapped in an italic DOM element 1`] = `
.emotion-0 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  font-family: inherit;
  font-weight: inherit;
}

<div>
  <i
    class="emotion-0 emotion-1"
  >
    This is some text with italic attributes
  </i>
</div>
`;

exports[`Fragment with no attributes should render just text 1`] = `
<div>
  This is some text with no attributes
</div>
`;
